--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vitt-simple-express-server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server2.js"
