--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vitt-simple-express-server",
   "version": "1.0.0",
-  "main": "server2.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server2.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
